grafana-aliyun/grafana-aliyun-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana-aliyun
  namespace: monitoring
spec:
  serviceName: "grafana-aliyun"
  selector:
    matchLabels:
      app: grafana-aliyun
  template:
    metadata:
      labels:
        app: grafana-aliyun
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: grafana-aliyun
        #存到你公司自己的镜像仓库，不要用docker官方仓库
        image: grafana/grafana:6.4.2
        ports:
        - containerPort: 3000
          name: grafana-aliyun
        resources:
          requests:
            cpu: 500m
            memory: 1024Mi
          limits:
            cpu: 500m
            memory: 1024Mi
        volumeMounts:
        - name: pv-metrics-grafana-aliyun
          mountPath: /var/lib/grafana
      volumes:
      - name: pv-metrics-grafana-aliyun
        persistentVolumeClaim:
          claimName: pv-metrics-grafana-aliyun
      - name: provision-dashboards
        emptyDir: {}
