grafana-aliyun/grafana-aliyun-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-aliyun
  namespace: monitoring
  labels:
    app: grafana-aliyun
spec:
  ports:
  - port: 3000
    name: http
  type: NodePort
  selector:
    app: grafana-aliyun
