grafana-aliyun/grafana-aliyun-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: grafana-aliyun
  name: grafana-aliyun
  namespace: monitoring
spec:
  rules:
  - host: monitor-aliyun.inc-inc.com
    http:
      paths:
      - backend:
          serviceName: grafana-aliyun
          servicePort: 3000
        path: /
